# agentic-solution-policiytracker

./: .env.template  .gitignore  .mcp.json.template  CLAUDE.md  Dockerfile  README.md  USER_GUIDE.md  app.py  config.yaml  config.yaml.template  conftest.py  docker-compose.yml  justfile  political_analyzer.py  pyproject.toml  simple_app.py  simple_test_data_retrieval.py  test_edge_content.py  test_tool_execution.py
.claude/: azure-integration.md  chat-patterns.md  development-workflow.md  etl-patterns.md  git-workflow.md  graphiti-patterns.md  graphrag-patterns.md  kodosumi-patterns.md  langfuse-prompts.md  langgraph-patterns.md  mcp-patterns.md  project-architecture.md  ray-deployment-patterns.md  test-patterns.md  testing-standards.md  tool-integration-patterns.md
.claude/commands/: deploy.md  status.md  test.md
data/: README.md
data/context/: client.yaml
docker/postgres-init/: 01-create-langfuse-db.sql
docker/prometheus/: prometheus.yml
docs/: CLEANUP_SUMMARY.md  DEPLOYMENT_UPDATE.md  PHASE_3_COMPLETION.md  PHASE_3_ORCHESTRATION_COMPLETE.md  PHASE_4_COMPLETION.md  PHASE_5_COMPLETION_SUMMARY.md  QUICK_REFERENCE.md  README.md  SEARCH_CAPABILITIES.md  SETUP.md  TODO.md  USER_GUIDE.md  V0.2.0_CLEANUP_PLAN.md  V0_1_0_RELEASE_CHECKLIST.md  graph.md  langfuse.md  political-schema-v2.md
docs/specs/: architecture.md  briefing.md  chat-interface-execution-plan.md  chatinterface.md  document-processing-pipeline-v0.2.0.md  dual-flow-etl-architecture.md  etl-airflow-implementation-plan.md  etl-airflow.md  etl-content-enhancement.md  feature-split-graph-processing.md  kodosumi.md  multi-agent-langgraph-implementation-plan.md  phase1-graphiti-foundation-todo.md  requirements.md  specification.md  v0.2.0-graphrag-specification.md  v0.2.0-split-graph-architecture.md  v0.2.0-three-kodosumi-flows-architecture.md
scripts/: README.md  build_communities.py  etl_init_manager.py  etl_test_summary.py  full_document_processing.py  import_data_to_azurite.py  ingest_test_documents.py  inspect_graph_schema.py  query_neo4j_test.py  setup_graphrag_embeddings.py  sync_env_to_config.py  test_approach_a.py  test_approach_a_fixed.py  test_basic_graphrag.py  test_document_pipeline.py  test_document_retrieval_capabilities.py  test_exa_direct_collector.py  test_exa_simple.py  test_graphrag_langfuse.py  test_graphrag_search_fix.py  test_graphrag_setup.py  test_mcp_direct_connection.py  test_mcp_graphiti_connection.py  test_policy_collection.py  test_policy_simple.py  test_political_document_processor.py  test_political_schema_v2.py  test_simple_kg_pipeline.py  upload_prompts_to_langfuse.py  validate_document_content_retrieval.py  verify_entity_types.py
scripts/_dev_testing/: README.md  compare_news_collectors.py  test_etl_initialization.py  (+8 more)
src/: app.py  config.py  political_analyzer.py
tests/: README.md  conftest.py  test_chat_agent.py
(+759 files in other folders)
